# gsuid_core_plugin_template

./: .pre-commit-config.yaml  ARCHITECTURE.md  ENABLE_TEMPLATE_BUTTON.md  README.md  TEMPLATE_SETUP.md  __full__.py  __init__.py  init_plugin.py  pyproject.toml  version.py
.github/workflows/: release-template.yml
docs/: GITHUB_SETUP.md  README.md  method-git-clone.md  method-github-template.md  method-template-package.md
