[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{PluginName}}"
version = "{{version}}"
description = "{{description}}"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "{{author}}", email = "{{author}}@example.com" }]
keywords = ["gsuid", "plugin", "bot", "qqbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 核心依赖
dependencies = [
    "gsuid-core>=0.2.0",
    "aiohttp>=3.8.0",
    "sqlmodel>=0.0.14",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.9",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

# 完整依赖（包含所有可选功能）
full = ["pre-commit>=3.5.0", "ruff>=0.1.9"]

[project.urls]
Homepage = "https://github.com/{{author}}/{{PluginName}}"
Repository = "https://github.com/{{author}}/{{PluginName}}.git"
Issues = "https://github.com/{{author}}/{{PluginName}}/issues"

[tool.hatch.build.targets.wheel]
packages = ["{{PluginName}}"]

# ==========================================
# UV 配置
# ==========================================
[tool.uv]
# 使用 uv 作为包管理器
# 安装: curl -LsSf https://astral.sh/uv/install.sh | sh
# 创建虚拟环境: uv venv
# 安装依赖: uv pip install -e ".[dev]"
# 同步依赖: uv pip sync requirements.txt
# 导出依赖: uv pip freeze > requirements.txt

# 允许使用系统 Python
python-preference = "only-system"

# 缓存配置
cache-dir = ".uv-cache"

[tool.uv.pip]
# 生成 requirements.txt 时包含哈希
generate-hashes = true

# ==========================================
# Ruff 配置（代码检查和格式化）
# ==========================================
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==========================================
# Pytest 配置
# ==========================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ==========================================
# Mypy 配置（类型检查）
# ==========================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# ==========================================
# 其他工具配置
# ==========================================
[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
